# zghost

./: .env  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  a2a_server.py  agent_config_example.json  agent_debugging.ipynb  artifact_server.py  claude_config.sh  deploy_to_cloud_run.sh  deployment_guide.ipynb  download_videos.sh  poll_veo_gen.sh  publish_to_agentspace.sh  publish_to_agentspace_v2.sh  pyproject.toml  quota_report_metrics_explorer.json  request.json  run_a2a_servers.sh  run_orchestrator_consumer.sh  setup_ae_sm_access.sh  test_agent_config.json  veo_generate.sh  veo_request.json
a2a_agents/: README.md
a2a_agents/ad_generator/: __init__.py  __main__.py  agent.py  standalone_agent.py
a2a_agents/orchestrator_consumer/: __init__.py  agent.json  agent.py  config.py
a2a_agents/remote_a2a/ad_generator/: agent.json  (+4 more)
a2a_agents/research_orchestrator/: __init__.py  __main__.py  agent.py  standalone_agent.py
a2a_agents/trends_insights/: __init__.py  __main__.py  agent.py  standalone_agent.py
deployment/: marketing_idea_generator_agent-0.1.0-py3-none-any.whl
frontend/: index.html  package-lock.json  package.json  test-base64.html  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  config.ts  global.css
learning/: configuring_bq_connector.md  guided_search_examples.md  hulkamania-spam-calls.md  key_adk_concepts.md  trends-2-creatives.md
marketing_idea_generator_agent/: .env  .env.example  __init__.py  agent.py  evalset04e03a.evalset.json  prompts.py  tools.py  utils.py
marketing_idea_generator_agent/common_agents/: __init__.py
notebooks/: deployment_guide.ipynb  hello_marketing_assets_w_gemini2.ipynb  hello_search_trends.ipynb  hello_youtube_analysis_w_gemini2.ipynb
notebooks/install_scripts/: install_ffmpeg.py  install_ffmpeg.sh
notebooks/installation_scripts/: install_ffmpeg.sh  install_opencv.sh
test/: env_gcs_integration.py
tests/: __init__.py  capability.test.json  env.py  gcs.py  simple_agent_eval.py  test_init.py  yt_web_tools.py
trends_and_insights_agent/: .env.example  __init__.py  a2a_client.py  agent.py  agent_a2a.py  agent_a2a_client.py  agent_with_subagents.py  evalset04e03a.evalset.json  prompts.py  requirements.txt  secrets.py  tools.py  utils.py
trends_and_insights_agent/common_agents/: __init__.py
(+112 files in other folders)
