[tool.poetry]
name = "trends_and_insights_agent"
version = "0.1.0"
description = ""
authors = ["Jeremy Wortz <jwortz@google.com>", "Jordan Totten <jordantotten@google.com>"]
readme = "README.md"
package-mode = true 

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
jupyter = "^1.1.1"
google-genai = "^1.19.0"
pillow = "^11.1.0"
google-adk = "1.5.0"
google-cloud-aiplatform = {extras = ["agent-engines"], version = "^1.91.0"}
pandas = "^2.2.3"
aiohttp = "^3.11.16"
markdown-pdf = "^1.7"
googlenews = "^1.6.15"
pytest = "^8.3.5"
ipython = "^9.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
