[tool.poetry]
name = "trends_and_insights_agent"
version = "0.1.0"
description = ""
authors = [
    "Jeremy Wortz <jwortz@google.com>",
    "Jordan Totten <jordantotten@google.com>",
]
readme = "README.md"
package-mode = true
packages = [{include = "trends_and_insights_agent"}, {include = "frontend"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
jupyter = "^1.1.1"
google-genai = "^1.19.0"
pillow = "^11.1.0"
google-adk = {extras = ["a2a"], version = "^1.11.0"}
google-cloud-aiplatform = { extras = ["agent-engines"], version = "^1.104.0" }
google-cloud-bigquery = "^3.34.0"
pandas = "^2.2.3"
aiohttp = "^3.11.16"
markdown-pdf = "^1.7"
pytest = "^8.3.5"
ipython = "^9.2.0"
db-dtypes = "^1.4.3"
tabulate = "^0.9.0"
opencv-python = "^4.12.0.88"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
